# PoseNet

./: .gitignore  Untitled.ipynb  custom_loss.py  daily log.md  main.py
LOG_Euroc/04-23-12:48/geocnn,adam,300epochs,b8,lr0.0001,stride5/test/: events.out.tfevents.1524487727.5515e1a6da0a
LOG_Euroc/04-24-11:51/posenets,adam,200epochs,b8,lr0.0001,stride10/test/: events.out.tfevents.1524541910.cvte
datasets/: Euroc.py  Kitti.py  __init__.py  base_dataset.py  test_quaternion.py  util.py
misc_cxx/: CMakeLists.txt  rotation2quaternion.cc  vector2transform.cc
models/: GeoCnn.py  PoseNetC.py  PoseNetS.py  __init__.py
models/corr/: build.py  build.py~
models/corr/_ext/corr/: __init__.py~
models/corr/functions/: corr.py
models/corr/modules/: corr.py
models/corr/src/: corr_cuda.c  corr_cuda.h
models/corr/src/cuda/: corr_kernel.cu  corr_kernel.h  install.bash  install.bash~
utils/: euroc_undistort.py
